--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
   },
   "autoload": {
     "psr-4": {
-      "Tribe\\Project\\": "src/"
+      "Tribe\\Bingo\\": "src/"
     },
     "files": [
     ]
